kubernetes/infrastructure/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana

spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
